infra/kubernetes/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-in-one-ingress
  namespace: all-in-one
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "all-in-one-ip"
spec:
  rules:
  - http:
      paths:
      - path: /identity
        pathType: Prefix
        backend:
          service:
            name: identity
            port:
              number: 80
      - path: /gateway
        pathType: Prefix
        backend:
          service:
            name: api-hub
            port:
              number: 80
      - path: /finance
        pathType: Prefix
        backend:
          service:
            name: finance
            port:
              number: 80
      - path: /marketplace
        pathType: Prefix
        backend:
          service:
            name: marketplace
            port:
              number: 80
      - path: /delivery
        pathType: Prefix
        backend:
          service:
            name: delivery
            port:
              number: 80
      - path: /wms
        pathType: Prefix
        backend:
          service:
            name: wms
            port:
              number: 80
      - path: /tms
        pathType: Prefix
        backend:
          service:
            name: tms
            port:
              number: 80
